# project-takoyaki-aimbot

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md
dependencies/: CMakeLists.txt
dependencies/libraries/Virtualizer/include/: VirtualizerSDK_BorlandC_inline_CAT_BLACK.h  VirtualizerSDK_BorlandC_inline_CAT_RED.h  VirtualizerSDK_BorlandC_inline_CAT_WHITE.h  VirtualizerSDK_BorlandC_inline_FISH_EXTREME.h  VirtualizerSDK_BorlandC_inline_FISH_LONDON.h  VirtualizerSDK_BorlandC_inline_TIGER_EXTREME.h  VirtualizerSDK_BorlandC_inline_TIGER_LITE.h  VirtualizerSDK_BorlandC_inline_TIGER_LONDON.h  VirtualizerSDK_CAT_BLACK.h  VirtualizerSDK_CAT_RED.h  VirtualizerSDK_CAT_WHITE.h  VirtualizerSDK_FISH_EXTREME.h  VirtualizerSDK_FISH_LONDON.h  VirtualizerSDK_GNU_inline_CAT_BLACK.h  VirtualizerSDK_GNU_inline_CAT_RED.h  VirtualizerSDK_GNU_inline_CAT_WHITE.h  VirtualizerSDK_GNU_inline_FISH_EXTREME.h  VirtualizerSDK_GNU_inline_FISH_LONDON.h  VirtualizerSDK_GNU_inline_TIGER_EXTREME.h  VirtualizerSDK_GNU_inline_TIGER_LITE.h  VirtualizerSDK_GNU_inline_TIGER_LONDON.h  VirtualizerSDK_ICL_inline_CAT_BLACK.h  VirtualizerSDK_ICL_inline_CAT_RED.h  VirtualizerSDK_ICL_inline_CAT_WHITE.h  VirtualizerSDK_ICL_inline_FISH_EXTREME.h  VirtualizerSDK_ICL_inline_FISH_LONDON.h  VirtualizerSDK_ICL_inline_TIGER_EXTREME.h  VirtualizerSDK_ICL_inline_TIGER_LITE.h  VirtualizerSDK_ICL_inline_TIGER_LONDON.h  VirtualizerSDK_LCC_inline_CAT_BLACK.h  (+19 more)
dependencies/submodules/: CMakeLists.txt
project-takoyaki-arduino/: platformio.ini
project-takoyaki-arduino/include/: config.hpp  hid_report.hpp
project-takoyaki-arduino/source/: hid_report.cpp  main.cpp
project-takoyaki-injector/: CMakeLists.txt
project-takoyaki-injector/include/: information.hpp
project-takoyaki-injector/source/: information.cpp
project-takoyaki-module/: CMakeLists.txt
project-takoyaki-module/include/: obs_hook.hpp
project-takoyaki-module/source/: dllmain.cpp  obs_hook.cpp
